# purchase_manager

./: .gitignore  .gitlab-ci.yml  pyproject.toml  setup.cfg
src/purchase_manager/: purchase_order.py
tests/: test_purchase_order.py
