[metadata]
name = purchase_manager
version = 1.0.0
description = Sample WhiteBox purchase manager
long_description = file: README.adoc
long_description_content_type = text/plain
author = Alexis Pasquier
author_email = alexis.pasquier@ndp-systemees.fr
license = GPLv3
vendor = NDP Systemes
website = http://ndp-systemes.fr/

[options]
packages = purchase_manager
;install_requires =
include_package_data = True
package_dir =
    =src
